Разметил header, приступил к разметке основного содержания

--- a/index.html
+++ b/index.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+</head>
 
-  </body>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html"><img src="img/nerds-logo.png" width="160" height="65" alt="Логотип студии Нёрдс"></a>
+      <ul class="site-navigation">
+        <li><a href="info.html">Студия</a></li>
+        <li><a href="our-clients.html">Клиенты</a></li>
+        <li><a href="nerds-catalog.psd">Магазин</a></li>
+
+        <li><a href="contacts.html">Контакты</a></li>
+      </ul>
+      <ul class="order">
+        <li class="basket"><a href="order-project.html">Корзина</a></li>
+        <!-- Как я понимаю, здесь должна быть ссылка на страницу заказа товара -->
+      </ul>
+    </nav>
+    <section class="faetures-slides">
+      <div class="slide-1">
+        <p><b>Долго, дорого,  скрупулезно.</b></p>
+        <p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
+        <img src="img/slide-1.png" alt="Смартфоны" width="" height="">
+      </div>
+      <div class="slide-2">
+        <p><b>Любим математику как никто другой</b></p>
+        <p>Никакого креатива, только математические формулы  для расчета идеальных пропорций</p>
+        <img src="img/slide-2.png" alt="Мониторы" width="" height="">
+      </div>
+      <div class="slide-3">
+        <p><b>Только ночь, только хардкор</b></p>
+        <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
+        <img src="img/slide-3.png" alt="Планшеты" width="" height="">
+      </div>
+    </section>
+    <main>
+      <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
+      <section class="services">
+        <h2 class="visually-hidden">Услуги</h2>
+        <ul class="service-list">
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+
+      </section>
+    </main>
+  </header>
+
+</body>
+
 </html>
