Внес правки в header и доделал блок с услугами

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html"><img src="img/nerds-logo.png" width="160" height="65" alt="Логотип студии Нёрдс"></a>
+      <a class="main-header-logo" href="index.html"><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
       <ul class="site-navigation">
         <li><a href="info.html">Студия</a></li>
         <li><a href="our-clients.html">Клиенты</a></li>
@@ -26,29 +26,46 @@
       <div class="slide-1">
         <p><b>Долго, дорого,  скрупулезно.</b></p>
         <p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
-        <img src="img/slide-1.png" alt="Смартфоны" width="" height="">
+        <img src="img/slide-1.jpg" alt="Смартфоны" width="" height="">
+        <a class="button-info" href="#">Узнать больше</a>
       </div>
       <div class="slide-2">
         <p><b>Любим математику как никто другой</b></p>
         <p>Никакого креатива, только математические формулы  для расчета идеальных пропорций</p>
-        <img src="img/slide-2.png" alt="Мониторы" width="" height="">
+        <img src="img/slide-2.jpg" alt="Мониторы" width="" height="">
+        <a class="button-info" href="#">Узнать больше</a>
       </div>
       <div class="slide-3">
         <p><b>Только ночь, только хардкор</b></p>
         <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
-        <img src="img/slide-3.png" alt="Планшеты" width="" height="">
+        <img src="img/slide-3.jpg" alt="Планшеты" width="" height="">
+        <a class="button-info" href="#">Узнать больше</a>
       </div>
     </section>
-    <main>
+    <main class="content">
       <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
       <section class="services">
         <h2 class="visually-hidden">Услуги</h2>
         <ul class="service-list">
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="service-item">
+            <img src="img/site" alt="Монитор с сайтом">
+            <h3>Веб-сайты</h3>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a class="order-button" href="order-project.html">Заказать</a>
+          </li>
+          <li class="service-item">
+            <img src="img/applications.jpg" alt="Смартфоны с приложением">
+            <h3>Приложения</h3>
+            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+            <a class="order-button" href="order-project.html">Заказать</a>
+          </li>
+          <li class="service-item">
+            <img src="img/presentation.jpg" alt="Презентационная доска">
+            <h3>Презентации</h3>
+            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+            <a class="order-button" href="order-project.html">Заказать</a>
+          </li>
         </ul>
-
       </section>
     </main>
   </header>
