--- a/index.html
+++ b/index.html
@@ -22,53 +22,82 @@
         <!-- Как я понимаю, здесь должна быть ссылка на страницу заказа товара -->
       </ul>
     </nav>
-    <section class="faetures-slides">
-      <div class="slide-1">
-        <p><b>Долго, дорого,  скрупулезно.</b></p>
-        <p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
+  </header>
+  <main class="content">
+    <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
+    <section class="faetures">
+      <div class="faetures-slide-1">
+        <p><b>Долго, дорого, скрупулезно.</b></p>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
         <img src="img/slide-1.jpg" alt="Смартфоны" width="" height="">
         <a class="button-info" href="#">Узнать больше</a>
       </div>
-      <div class="slide-2">
+      <div class="faetures-slide-2">
         <p><b>Любим математику как никто другой</b></p>
-        <p>Никакого креатива, только математические формулы  для расчета идеальных пропорций</p>
+        <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
         <img src="img/slide-2.jpg" alt="Мониторы" width="" height="">
         <a class="button-info" href="#">Узнать больше</a>
       </div>
-      <div class="slide-3">
+      <div class="faetures-slide-3">
         <p><b>Только ночь, только хардкор</b></p>
         <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
         <img src="img/slide-3.jpg" alt="Планшеты" width="" height="">
         <a class="button-info" href="#">Узнать больше</a>
       </div>
     </section>
-    <main class="content">
-      <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
-      <section class="services">
-        <h2 class="visually-hidden">Услуги</h2>
-        <ul class="service-list">
-          <li class="service-item">
-            <img src="img/site" alt="Монитор с сайтом">
-            <h3>Веб-сайты</h3>
-            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a class="order-button" href="order-project.html">Заказать</a>
-          </li>
-          <li class="service-item">
-            <img src="img/applications.jpg" alt="Смартфоны с приложением">
-            <h3>Приложения</h3>
-            <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-            <a class="order-button" href="order-project.html">Заказать</a>
-          </li>
-          <li class="service-item">
-            <img src="img/presentation.jpg" alt="Презентационная доска">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a class="order-button" href="order-project.html">Заказать</a>
-          </li>
-        </ul>
-      </section>
-    </main>
-  </header>
+    <section class="services">
+      <h2 class="visually-hidden">Услуги</h2>
+      <ul class="service-list">
+        <li class="service-item">
+          <img src="img/site" alt="Монитор с сайтом">
+          <h3>Веб-сайты</h3>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a class="order-button" href="order-project.html">Заказать</a>
+        </li>
+        <li class="service-item">
+          <img src="img/applications.jpg" alt="Смартфоны с приложением">
+          <h3>Приложения</h3>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a class="order-button" href="order-project.html">Заказать</a>
+        </li>
+        <li class="service-item">
+          <img src="img/presentation.jpg" alt="Презентационная доска">
+          <h3>Презентации</h3>
+          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <a class="order-button" href="order-project.html">Заказать</a>
+        </li>
+      </ul>
+    </section>
+    <section class="adout-us">
+      <p><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический рассчет
+        превыше креатива. Работаем непокладая рук, как роботы.</p>
+    </section>
+    <section class="partners">
+      <h2 class="visually-hidden">Наши партнеры</h2>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      <a href="#">Barbershop Borodiski</a>
+      <a href="#">Pink</a>
+      <a href="#">Mishka</a>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <p class="contacts">
+      <b>Nёrds design studio</b>
+      191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (817) 275-75-75
+      <a class="button" href="#">Напишите нам</a>
+    </p>
+    <!-- Здесь будет форма обратной связи -->
+    <div class="footer-social" <b>Давайте дружить</b>
+      <a class="social button" href="#">Вконтакте</a>
+      <a class="social button" href="#">Фейсбук</a>
+      <a class="social button" href="#">Инстаграм</a>
+    </div>
+    <p><b>Давайте дружить, это выгодно!</b></p>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
+
+  </footer>
+
 
 </body>
 
