--- a/catalog.html
+++ b/catalog.html
@@ -33,45 +33,62 @@
         <li class="catalog-item">
           <h3><a href="#">Sedona</a></h3>
           <p>Информационный сайт для туристов</p>
-          <p><img src="img/img-sedonna.jpg" alt="Информационный сайт для туристов Sedona"> width="360" height="576"</p>
+          <p><img src="img/img-sedonna.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576"></p>
           <a class="button" href="order-project.html"></a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">Pink App</a></h3>
           <p>Продуктовый лендинг приложения для iOS и Android</p>
-          <p><img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App"> width="360" height="576"</p>
+          <p><img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576"></p>
           <a class="button" href="order-project.html"></a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">Barbershop</a></h3>
           <p>Сайт салона красоты. Для мужчин, да.</p>
-          <p><img src="img/img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop"> width="360" height="576"</p>
+          <p><img src="img/img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576"></p>
           <a class="button" href="order-project.html"></a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">Mishka</a></h3>
           <p>Интернет-магазин вязаных игрушек</p>
-          <p><img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka"> width="360" height="576"</p>
+          <p><img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576"></p>
           <a class="button" href="order-project.html"></a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">A Plus</a></h3>
           <p>Лендниг курсов повышения квалификации</p>
-          <p><img src="img/aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus"> width="360" height="576"</p>
+          <p><img src="img/aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576"></p>
           <a class="button" href="order-project.html"></a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">Кваст</a></h3>
           <p>Промо-сайт производителя крафтового кваса</p>
-          <p><img src="img/kvast.jpg" alt="Cайт производителя крафтового кваса Кваст"> width="360" height="576"</p>
+          <p><img src="img/kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576"></p>
           <a class="button" href="order-project.html"></a>
         </li>
       </ul>
+      <ul class="pagination-list">
+        <li class="pagination-item"><a href="#">1</a></li>
+        <li class="pagination-item pagination-item-current">2</li>
+        <li class="pagination-item"><a href="#">3</a></li>
+      </ul>
     </section>
-
-
-
   </main>
+  <footer class="main-footer">
+    <p class="contacts">
+      <b>Nёrds design studio</b>
+      191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (817) 275-75-75
+      <a class="button" href="#">Напишите нам</a>
+    </p>
+    <!-- Здесь будет форма обратной связи -->
+    <div class="footer-social" <b>Давайте дружить</b>
+      <a class="social button" href="#">Вконтакте</a>
+      <a class="social button" href="#">Фейсбук</a>
+      <a class="social button" href="#">Инстаграм</a>
+    </div>
+    <p><b>Давайте дружить, это выгодно!</b></p>
+    <p>Скидка 10% для друзей из социальных сетей.</p>
+  </footer>
 </body>
 
 </html>
