--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <ul class="site-navigation">
         <li><a href="info.html">Студия</a></li>
         <li><a href="our-clients.html">Клиенты</a></li>
-        <li><a href="nerds-catalog.psd">Магазин</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
 
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
