Исправил ряд ошибок, найденных валидатором

--- a/catalog.html
+++ b/catalog.html
@@ -34,37 +34,37 @@
           <h3><a href="#">Sedona</a></h3>
           <p>Информационный сайт для туристов</p>
           <p><img src="img/img-sedonna.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576"></p>
-          <a class="button" href="order-project.html"></a>
+          <a class="button" href="order-project.html">9900 руб.</a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">Pink App</a></h3>
           <p>Продуктовый лендинг приложения для iOS и Android</p>
           <p><img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576"></p>
-          <a class="button" href="order-project.html"></a>
+          <a class="button" href="order-project.html">9900 руб.</a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">Barbershop</a></h3>
           <p>Сайт салона красоты. Для мужчин, да.</p>
           <p><img src="img/img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576"></p>
-          <a class="button" href="order-project.html"></a>
+          <a class="button" href="order-project.html">9900 руб.</a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">Mishka</a></h3>
           <p>Интернет-магазин вязаных игрушек</p>
           <p><img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576"></p>
-          <a class="button" href="order-project.html"></a>
+          <a class="button" href="order-project.html">9900 руб.</a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">A Plus</a></h3>
           <p>Лендниг курсов повышения квалификации</p>
           <p><img src="img/aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576"></p>
-          <a class="button" href="order-project.html"></a>
+          <a class="button" href="order-project.html">9900 руб.</a>
         </li>
         <li class="catalog-item">
           <h3><a href="#">Кваст</a></h3>
           <p>Промо-сайт производителя крафтового кваса</p>
           <p><img src="img/kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576"></p>
-          <a class="button" href="order-project.html"></a>
+          <a class="button" href="order-project.html">9900 руб.</a>
         </li>
       </ul>
       <ul class="pagination-list">
