--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <li><a href="info.html">Студия</a></li>
         <li><a href="our-clients.html">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
-
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
       <ul class="order">
@@ -29,19 +28,19 @@
       <div class="faetures-slide-1">
         <p><b>Долго, дорого, скрупулезно.</b></p>
         <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
-        <img src="img/slide-1.jpg" alt="Смартфоны" width="" height="">
+        <img src="img/slide-1.jpg" alt="Смартфоны" width="698" height="413">
         <a class="button-info" href="#">Узнать больше</a>
       </div>
       <div class="faetures-slide-2">
         <p><b>Любим математику как никто другой</b></p>
         <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-        <img src="img/slide-2.jpg" alt="Мониторы" width="" height="">
+        <img src="img/slide-2.jpg" alt="Мониторы" width="698" height="413">
         <a class="button-info" href="#">Узнать больше</a>
       </div>
       <div class="faetures-slide-3">
         <p><b>Только ночь, только хардкор</b></p>
         <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
-        <img src="img/slide-3.jpg" alt="Планшеты" width="" height="">
+        <img src="img/slide-3.jpg" alt="Планшеты" width="698" height="413">
         <a class="button-info" href="#">Узнать больше</a>
       </div>
     </section>
@@ -49,19 +48,19 @@
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="service-list">
         <li class="service-item">
-          <img src="img/site" alt="Монитор с сайтом">
+          <img src="img/site" alt="Монитор с сайтом" width="300" height="146">
           <h3>Веб-сайты</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
-          <img src="img/applications.jpg" alt="Смартфоны с приложением">
+          <img src="img/applications.jpg" alt="Смартфоны с приложением" width="300" height="146">
           <h3>Приложения</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
-          <img src="img/presentation.jpg" alt="Презентационная доска">
+          <img src="img/presentation.jpg" alt="Презентационная доска" width="300" height="146">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
@@ -88,7 +87,7 @@
       <a class="button" href="#">Напишите нам</a>
     </p>
     <!-- Здесь будет форма обратной связи -->
-    <div class="footer-social" <b>Давайте дружить</b>
+    <div class="footer-social">
       <a class="social button" href="#">Вконтакте</a>
       <a class="social button" href="#">Фейсбук</a>
       <a class="social button" href="#">Инстаграм</a>
