Исправил ошибку в написании тега и удалил лишнюю строку

--- a/catalog.html
+++ b/catalog.html
@@ -80,7 +80,7 @@
       <a class="button" href="#">Напишите нам</a>
     </p>
     <!-- Здесь будет форма обратной связи -->
-    <div class="footer-social" <b>Давайте дружить</b>
+    <div class="footer-social">
       <a class="social button" href="#">Вконтакте</a>
       <a class="social button" href="#">Фейсбук</a>
       <a class="social button" href="#">Инстаграм</a>
