Исправил ошибку в названии класса

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
   </header>
   <main class="content">
     <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
-    <section class="faetures">
-      <div class="faetures-slide-1">
+    <section class="features">
+      <div class="features-slide-1">
         <p><b>Долго, дорого, скрупулезно.</b></p>
         <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
         <img src="img/slide-1.jpg" alt="Смартфоны" width="698" height="413">
         <a class="button-info" href="#">Узнать больше</a>
       </div>
-      <div class="faetures-slide-2">
+      <div class="features-slide-2">
         <p><b>Любим математику как никто другой</b></p>
         <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
         <img src="img/slide-2.jpg" alt="Мониторы" width="698" height="413">
         <a class="button-info" href="#">Узнать больше</a>
       </div>
-      <div class="faetures-slide-3">
+      <div class="features-slide-3">
         <p><b>Только ночь, только хардкор</b></p>
         <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
         <img src="img/slide-3.jpg" alt="Планшеты" width="698" height="413">
