--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -13,7 +13,7 @@
       <ul class="site-navigation">
         <li><a href="info.html">Студия</a></li>
         <li><a href="our-clients.html">Клиенты</a></li>
-        <li class="site-navigation-current"><a href="nerds-catalog.html">Магазин</a></li>
+        <li class="site-navigation-current"><a>Магазин</a></li>
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
       <ul class="order">
@@ -22,7 +22,9 @@
     </nav>
   </header>
   <main class="container">
-    <h1 class="page-title">Магазин готовых шаблонов</h1>
+    <section class="head-name">
+      <h1 class="page-title">Магазин готовых шаблонов</h1>
+    </section>
     <section class="filters">
       <h2 class="visually-hidden">Фильтр товаров</h2>
       <!-- Здесь будет форма -->
@@ -31,62 +33,82 @@
       <h2 class="visually-hidden">Список шаблонов</h2>
       <ul class="catalog-list">
         <li class="catalog-item">
-          <h3><a href="#">Sedona</a></h3>
-          <p>Информационный сайт для туристов</p>
-          <p><img src="img/img-sedonna.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576"></p>
-          <a class="button" href="order-project.html">9900 руб.</a>
+          <img src="img/img-sedonna.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576">
+          <div class="desciption-project">
+            <h3 class="sedona-demo"><a href="#">Sedona</a></h3>
+            <p>Информационный сайт для туристов</p>
+            <a class="button" href="order-project.html">9900 руб.</a>
+          </div>
         </li>
         <li class="catalog-item">
-          <h3><a href="#">Pink App</a></h3>
-          <p>Продуктовый лендинг приложения для iOS и Android</p>
-          <p><img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576"></p>
-          <a class="button" href="order-project.html">9900 руб.</a>
+          <img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576">
+          <div class="desciption-project">
+            <h3 class="pink-demo"><a href="#">Pink App</a></h3>
+            <p>Продуктовый лендинг приложения для iOS и Android</p>
+            <a class="button" href="order-project.html">9900 руб.</a>
+          </div>
         </li>
         <li class="catalog-item">
-          <h3><a href="#">Barbershop</a></h3>
-          <p>Сайт салона красоты. Для мужчин, да.</p>
-          <p><img src="img/img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576"></p>
-          <a class="button" href="order-project.html">9900 руб.</a>
+          <img src="img/img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576">
+          <div class="desciption-project">
+            <h3 class="barbershop-demo"><a href="#">Barbershop</a></h3>
+            <p>Сайт салона красоты. Для мужчин, да.</p>
+            <a class="button" href="order-project.html">9900 руб.</a>
+          </div>
         </li>
         <li class="catalog-item">
-          <h3><a href="#">Mishka</a></h3>
-          <p>Интернет-магазин вязаных игрушек</p>
-          <p><img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576"></p>
-          <a class="button" href="order-project.html">9900 руб.</a>
+          <img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576">
+          <div class="desciption-project">
+            <h3 class="mishka-demo"><a href="#">Mishka</a></h3>
+            <p>Интернет-магазин вязаных игрушек</p>
+            <a class="button" href="order-project.html">9900 руб.</a>
+          </div>
         </li>
         <li class="catalog-item">
-          <h3><a href="#">A Plus</a></h3>
-          <p>Лендниг курсов повышения квалификации</p>
-          <p><img src="img/aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576"></p>
-          <a class="button" href="order-project.html">9900 руб.</a>
+          <img src="img/aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576">
+          <div class="desciption-project">
+            <h3 class="aplus-demo"><a href="#">A Plus</a></h3>
+            <p>Лендниг курсов повышения квалификации</p>
+            <a class="button" href="order-project.html">9900 руб.</a>
+          </div>
         </li>
         <li class="catalog-item">
-          <h3><a href="#">Кваст</a></h3>
-          <p>Промо-сайт производителя крафтового кваса</p>
-          <p><img src="img/kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576"></p>
-          <a class="button" href="order-project.html">9900 руб.</a>
+          <img src="img/kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576">
+          <div class="desciption-project">
+            <h3 class="kvast-demo"><a href="#">Кваст</a></h3>
+            <p>Промо-сайт производителя крафтового кваса</p>
+            <a class="button" href="order-project.html">9900 руб.</a>
+          </div>
         </li>
       </ul>
       <ul class="pagination-list">
-        <li class="pagination-item pagination-item-current">2</li>
-        <li class="pagination-item"><a href="#">3</a></li>
+        <li><a href="#">1</a></li>
+        <li><a>2</a></li>
+        <li><a href="#">3</a></li>
       </ul>
     </section>
   </main>
   <footer class="main-footer">
-    <p class="contacts">
-      <b>Nёrds design studio</b>
-      191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (817) 275-75-75
-      <a class="button" href="#">Напишите нам</a>
-    </p>
-    <!-- Здесь будет форма обратной связи -->
-    <div class="footer-social">
-      <a class="social button" href="#">Вконтакте</a>
-      <a class="social button" href="#">Фейсбук</a>
-      <a class="social button" href="#">Инстаграм</a>
+    <div class="location">
+      <div class="contacts">
+        <p class="contact-name">Nёrds design studio</p>
+        <p class="contact-adress">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <p class="contact-phone">тел. +7 (817) 275-75-75</p>
+        <a class="button" href="#">Напишите нам</a>
+      </div>
     </div>
-    <p><b>Давайте дружить, это выгодно!</b></p>
-    <p>Скидка 10% для друзей из социальных сетей.</p>
+    <!-- Здесь будет форма обратной связи -->
+    <div class="connection">
+      <div class="footer-social">
+        <a class="social button" href="#">Вконтакте</a>
+        <a class="social button" href="#">Фейсбук</a>
+        <a class="social button" href="#">Инстаграм</a>
+      </div>
+      <div class="for-friends">
+        <p class="friendship"><b>Давайте дружить, это выгодно!</b></p>
+        <p class="discont">Скидка 10% для друзей из социальных сетей.</p>
+      </div>
+    </div>
   </footer>
 </body>
 
