--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="partners">
       <h2 class="visually-hidden">Наши партнеры</h2>
       <ul>
-        <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="" alt="HTML Academy"></a></li>
+        <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy-logo.png" alt="HTML Academy"></a></li>
         <li><a href="#"><img src="img/logo-html.png" alt="Barbershop Borodiski"></a></li>
         <li><a href="#"><img src="img/logo-pink.png" alt="Pink"></a></li>
         <li><a href="#"><img src="img/logo-mishka.png" alt="Mishka"></a></li>
