Внес правки в index и catalog

--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
         <li class="catalog-item">
           <img src="img/img-sedonna.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576">
           <div class="desciption-project">
-            <h3 class="sedona-demo"><a href="#">Sedona</a></h3>
+            <h3 class="catalog-item-topic"><a href="#">Sedona</a></h3>
             <p>Информационный сайт для туристов</p>
             <a class="button" href="order-project.html">9900 руб.</a>
           </div>
@@ -43,7 +43,7 @@
         <li class="catalog-item">
           <img src="img/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576">
           <div class="desciption-project">
-            <h3 class="pink-demo"><a href="#">Pink App</a></h3>
+            <h3 class="catalog-item-topic"><a href="#">Pink App</a></h3>
             <p>Продуктовый лендинг приложения для iOS и Android</p>
             <a class="button" href="order-project.html">9900 руб.</a>
           </div>
@@ -51,7 +51,7 @@
         <li class="catalog-item">
           <img src="img/img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576">
           <div class="desciption-project">
-            <h3 class="barbershop-demo"><a href="#">Barbershop</a></h3>
+            <h3 class="catalog-item-topic"><a href="#">Barbershop</a></h3>
             <p>Сайт салона красоты. Для мужчин, да.</p>
             <a class="button" href="order-project.html">9900 руб.</a>
           </div>
@@ -59,7 +59,7 @@
         <li class="catalog-item">
           <img src="img/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576">
           <div class="desciption-project">
-            <h3 class="mishka-demo"><a href="#">Mishka</a></h3>
+            <h3 class="catalog-item-topic"><a href="#">Mishka</a></h3>
             <p>Интернет-магазин вязаных игрушек</p>
             <a class="button" href="order-project.html">9900 руб.</a>
           </div>
@@ -67,7 +67,7 @@
         <li class="catalog-item">
           <img src="img/aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576">
           <div class="desciption-project">
-            <h3 class="aplus-demo"><a href="#">A Plus</a></h3>
+            <h3 class="catalog-item-topic"><a href="#">A Plus</a></h3>
             <p>Лендниг курсов повышения квалификации</p>
             <a class="button" href="order-project.html">9900 руб.</a>
           </div>
@@ -75,16 +75,17 @@
         <li class="catalog-item">
           <img src="img/kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576">
           <div class="desciption-project">
-            <h3 class="kvast-demo"><a href="#">Кваст</a></h3>
+            <h3 class="catalog-item-topic"><a href="#">Кваст</a></h3>
             <p>Промо-сайт производителя крафтового кваса</p>
             <a class="button" href="order-project.html">9900 руб.</a>
           </div>
         </li>
       </ul>
       <ul class="pagination-list">
-        <li><a href="#">1</a></li>
-        <li><a>2</a></li>
+        <li><a>1</a></li>
+        <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
+        <li a href="#">Следующая</li>
       </ul>
     </section>
   </main>
@@ -93,7 +94,7 @@
       <div class="contacts">
         <p class="contact-name">Nёrds design studio</p>
         <p class="contact-adress">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <p class="contact-phone">тел. +7 (817) 275-75-75</p>
+        <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
         <a class="button" href="#">Напишите нам</a>
       </div>
     </div>
