--- a/index.html
+++ b/index.html
@@ -25,22 +25,19 @@
   <main class="content">
     <h1 class="visually-hidden">Дизайн-студия Нёрдс</h1>
     <section class="features">
-      <div class="features-slide-1">
-        <div class="slide-1"></div>
-        <p class="slide-1-slogan"><b>Долго, дорого, скрупулезно.</b></p>
-        <p class="slide-1-caption">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+      <div class="features-slide features-slide-1">
+        <p class="slide-slogan"><b>Долго, дорого, скрупулезно.</b></p>
+        <p class="slide-caption">Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
         <a class="button-info" href="#">Узнать больше</a>
       </div>
-      <div class="features-slide-2">
-        <div class="slide-2"></div>
-        <p class="slide-2-slogan"><b>Любим математику как никто другой</b></p>
-        <p class="slide-2-caption">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+      <div class="features-slide features-slide-2">
+        <p class="slide-slogan"><b>Любим математику как никто другой</b></p>
+        <p class="slide-caption">Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
         <a class="button-info" href="#">Узнать больше</a>
       </div>
-      <div class="features-slide-3">
-        <div class="slide-3"></div>
-        <p class="slide-3-slogan"><b>Только ночь, только хардкор</b></p>
-        <p class="slide-3-caption">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
+      <div class="features-slide features-slide-3">
+        <p class="slide-slogan"><b>Только ночь, только хардкор</b></p>
+        <p class="slide-caption">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается</p>
         <a class="button-info" href="#">Узнать больше</a>
       </div>
     </section>
@@ -49,19 +46,19 @@
       <ul class="service-list">
         <li class="service-item">
           <img src="img/site" alt="Монитор с сайтом" width="300" height="146">
-          <p class="site">Веб-сайты</p>
+          <p class="service-item-title">Веб-сайты</p>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
           <img src="img/applications.jpg" alt="Смартфоны с приложением" width="300" height="146">
-          <p class="applications">Приложения</p>
+          <p class="service-item-title">Приложения</p>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
           <img src="img/presentation.jpg" alt="Презентационная доска" width="300" height="146">
-          <p class="presentation">Презентации</p>
+          <p class="service-item-title">Презентации</p>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
@@ -82,7 +79,7 @@
       <div class="contacts">
         <p class="contact-name">Nёrds design studio</p>
         <p class="contact-adress">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <p class="contact-phone">тел. +7 (817) 275-75-75</p>
+        <p class="contact-phone"><a href="tel:+78172757575">тел. +7 (817) 275-75-75</a></p>
         <a class="button" href="#">Напишите нам</a>
       </div>
     </div>
