--- a/catalog.html
+++ b/catalog.html
@@ -85,7 +85,7 @@
         <li><a>1</a></li>
         <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
-        <li a href="#">Следующая</li>
+        <li <a href="#">Следующая</li>
       </ul>
     </section>
   </main>
