Разметил блок с инфой о компании на главной странице

--- a/index.html
+++ b/index.html
@@ -64,6 +64,34 @@
         </li>
       </ul>
     </section>
+    <section class="description-company">
+      <h2 class="visually-hidden">Наши возможности и достижения</h2>
+      <div class="principle-company">
+        <p><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+          превыше креатива. Работаем не покладая рук, как роботы.</p>
+      </div>
+      <div class="ability-company">
+        <h3 class="ability-title">Выполняем заказы на разработку:</h3>
+        <ul class="ability-list">
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+      </div>
+      <div class="our-progress">
+        <img src="img/nerds-illustration.svg" width="360" height="208" alt="Логотип студии Нёрдс">
+        <p>с 2004 года Любим точность во всем:</p>
+        <dl class="commercial-list">
+          <dt>146%</dt>
+          <dd>Уровень самоотдачи</dd>
+          <dt>100%</dt>
+          <dd>Соблюдение сроков</dd>
+          <dt>50%</dt>
+          <dd>Минимальная предоплата</dd>
+        </dl>
+      </div>
+    </section>
     <section class="partners">
       <h2 class="visually-hidden">Наши партнеры</h2>
       <ul>
