Добавил папки с изображениями в  img

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="main-header-logo"><img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
+      <a class="main-header-logo"><img src="img/header/nerds-logo.svg" width="160" height="65" alt="Логотип студии Нёрдс"></a>
       <ul class="site-navigation">
         <li><a href="info.html">Студия</a></li>
         <li><a href="our-clients.html">Клиенты</a></li>
@@ -65,7 +65,7 @@
       </ul>
     </section>
     <section class="description-company">
-      <h2 class="visually-hidden">Наши возможности и достижения</h2>
+      <h3 class="visually-hidden">Наши возможности и достижения</h3>
       <div class="principle-company">
         <p><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
@@ -96,7 +96,7 @@
       <h2 class="visually-hidden">Наши партнеры</h2>
       <ul>
         <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy-logo.png" alt="HTML Academy"></a></li>
-        <li><a href="#"><img src="img/logo-html.png" alt="Barbershop Borodiski"></a></li>
+        <li><a href="#"><img src="img/logo-barber.png" alt="Barbershop Borodiski"></a></li>
         <li><a href="#"><img src="img/logo-pink.png" alt="Pink"></a></li>
         <li><a href="#"><img src="img/logo-mishka.png" alt="Mishka"></a></li>
       </ul>
