--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="service-list">
         <li class="service-item">
-          <img src="img/site" alt="Монитор с сайтом" width="300" height="146">
+          <img src="img\service-item\service-item-1.jpg" alt="Монитор с сайтом" width="300" height="146">
           <p class="service-item-title">Веб-сайты</p>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
-          <img src="img/applications.jpg" alt="Смартфоны с приложением" width="300" height="146">
+          <img src="img\service-item\service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
           <p class="service-item-title">Приложения</p>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
-          <img src="img/presentation.jpg" alt="Презентационная доска" width="300" height="146">
+          <img src="img\service-item\service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
           <p class="service-item-title">Презентации</p>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
@@ -80,25 +80,29 @@
         </ul>
       </div>
       <div class="our-progress">
-        <img src="img/nerds-illustration.svg" width="360" height="208" alt="Логотип студии Нёрдс">
-        <p>с 2004 года Любим точность во всем:</p>
-        <dl class="commercial-list">
-          <dt>146%</dt>
-          <dd>Уровень самоотдачи</dd>
-          <dt>100%</dt>
-          <dd>Соблюдение сроков</dd>
-          <dt>50%</dt>
-          <dd>Минимальная предоплата</dd>
-        </dl>
+        <img src="img\description-company\nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
+        <p>C 2004 года Любим точность во всем:</p>
+        <table class="progress-table">
+          <tr class="procent">
+            <td>146%</td>
+            <td>100%</td>
+            <td>50%</td>
+          </tr>
+          <tr class="value">
+            <td>Уровень самоотдачи</td>
+            <td>Соблюдение сроков</td>
+            <td>Минимальная предоплата</td>
+          </tr>
+        </table>
       </div>
     </section>
     <section class="partners">
       <h2 class="visually-hidden">Наши партнеры</h2>
       <ul>
-        <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy-logo.png" alt="HTML Academy"></a></li>
-        <li><a href="#"><img src="img/logo-barber.png" alt="Barbershop Borodiski"></a></li>
-        <li><a href="#"><img src="img/logo-pink.png" alt="Pink"></a></li>
-        <li><a href="#"><img src="img/logo-mishka.png" alt="Mishka"></a></li>
+        <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img\partners\logo-html.png" alt="HTML Academy"></a></li>
+        <li><a href="#"><img src="img\partners\logo-barber.png" alt="Barbershop Borodiski"></a></li>
+        <li><a href="#"><img src="img\partners\logo-pink.png" alt="Pink"></a></li>
+        <li><a href="#"><img src="img\partners\logo-mishka.png" alt="Mishka"></a></li>
       </ul>
     </section>
   </main>
