В cataog.html Переименовал класс description-project в desciption-catalog-item

--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
       <ul class="catalog-list">
         <li class="catalog-item">
           <img src="img\catalog-item\img-sedona.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576">
-          <div class="desciption-project">
+          <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Sedona</a></h3>
             <p>Информационный сайт для туристов</p>
             <a class="button" href="order-project.html">9900 руб.</a>
@@ -42,7 +42,7 @@
         </li>
         <li class="catalog-item">
           <img src="img\catalog-item\img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576">
-          <div class="desciption-project">
+          <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Pink App</a></h3>
             <p>Продуктовый лендинг приложения для iOS и Android</p>
             <a class="button" href="order-project.html">9900 руб.</a>
@@ -50,7 +50,7 @@
         </li>
         <li class="catalog-item">
           <img src="img\catalog-item\img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576">
-          <div class="desciption-project">
+          <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Barbershop</a></h3>
             <p>Сайт салона красоты. Для мужчин, да.</p>
             <a class="button" href="order-project.html">9900 руб.</a>
@@ -58,7 +58,7 @@
         </li>
         <li class="catalog-item">
           <img src="img\catalog-item\img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576">
-          <div class="desciption-project">
+          <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Mishka</a></h3>
             <p>Интернет-магазин вязаных игрушек</p>
             <a class="button" href="order-project.html">9900 руб.</a>
@@ -66,7 +66,7 @@
         </li>
         <li class="catalog-item">
           <img src="img\catalog-item\img-aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576">
-          <div class="desciption-project">
+          <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">A Plus</a></h3>
             <p>Лендниг курсов повышения квалификации</p>
             <a class="button" href="order-project.html">9900 руб.</a>
@@ -74,7 +74,7 @@
         </li>
         <li class="catalog-item">
           <img src="img\catalog-item\img-kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576">
-          <div class="desciption-project">
+          <div class="description-catalog-item>
             <h3 class="catalog-item-topic"><a href="#">Кваст</a></h3>
             <p>Промо-сайт производителя крафтового кваса</p>
             <a class="button" href="order-project.html">9900 руб.</a>
