Поменял обратный слеш на обычный (ругается валидатор)

--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="service-list">
         <li class="service-item">
-          <img src="img\service-item\service-item-1.jpg" alt="Монитор с сайтом" width="300" height="146">
+          <img src="img/service-item/service-item-1.jpg" alt="Монитор с сайтом" width="300" height="146">
           <p class="service-item-title">Веб-сайты</p>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
-          <img src="img\service-item\service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
+          <img src="img/service-item/service-item-2.jpg" alt="Смартфоны с приложением" width="300" height="146">
           <p class="service-item-title">Приложения</p>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
         </li>
         <li class="service-item">
-          <img src="img\service-item\service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
+          <img src="img/service-item/service-item-3.jpg" alt="Презентационная доска" width="300" height="146">
           <p class="service-item-title">Презентации</p>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a class="order-button" href="order-project.html">Заказать</a>
@@ -80,7 +80,7 @@
         </ul>
       </div>
       <div class="our-progress">
-        <img src="img\description-company\nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
+        <img src="img/description-company/nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
         <p>C 2004 года Любим точность во всем:</p>
         <table class="progress-table">
           <tr class="procent">
@@ -99,10 +99,10 @@
     <section class="partners">
       <h2 class="visually-hidden">Наши партнеры</h2>
       <ul>
-        <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img\partners\logo-html.png" alt="HTML Academy"></a></li>
-        <li><a href="#"><img src="img\partners\logo-barber.png" alt="Barbershop Borodiski"></a></li>
-        <li><a href="#"><img src="img\partners\logo-pink.png" alt="Pink"></a></li>
-        <li><a href="#"><img src="img\partners\logo-mishka.png" alt="Mishka"></a></li>
+        <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/partners/logo-html.png" alt="HTML Academy"></a></li>
+        <li><a href="#"><img src="img/partners/logo-barber.png" alt="Barbershop Borodiski"></a></li>
+        <li><a href="#"><img src="img/partners/logo-pink.png" alt="Pink"></a></li>
+        <li><a href="#"><img src="img/partners/logo-mishka.png" alt="Mishka"></a></li>
       </ul>
     </section>
   </main>
