--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
       <h2 class="visually-hidden">Список шаблонов</h2>
       <ul class="catalog-list">
         <li class="catalog-item">
-          <img src="img\catalog-item\img-sedona.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576">
+          <img src="img/catalog-item/img-sedona.jpg" alt="Информационный сайт для туристов Sedona" width="360" height="576">
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Sedona</a></h3>
             <p>Информационный сайт для туристов</p>
@@ -41,7 +41,7 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img\catalog-item\img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576">
+          <img src="img/catalog-item/img-pink.jpg" alt="Продуктовый лендинг приложения для iOS и Android Pink App" width="360" height="576">
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Pink App</a></h3>
             <p>Продуктовый лендинг приложения для iOS и Android</p>
@@ -49,7 +49,7 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img\catalog-item\img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576">
+          <img src="img/catalog-item/img-barbershop.jpg" alt="Сайт мужского салона красоты Barbershop" width="360" height="576">
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Barbershop</a></h3>
             <p>Сайт салона красоты. Для мужчин, да.</p>
@@ -57,7 +57,7 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img\catalog-item\img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576">
+          <img src="img/catalog-item/img-mishka.jpg" alt="Интернет-магазин вязаных игрушек Mishka" width="360" height="576">
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Mishka</a></h3>
             <p>Интернет-магазин вязаных игрушек</p>
@@ -65,7 +65,7 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img\catalog-item\img-aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576">
+          <img src="img/catalog-item/img-aplus.jpg" alt="Лендниг курсов повышения квалификации A Plus" width="360" height="576">
           <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">A Plus</a></h3>
             <p>Лендниг курсов повышения квалификации</p>
@@ -73,7 +73,7 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img\catalog-item\img-kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576">
+          <img src="img/catalog-item/img-kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576">
           <div class="description-catalog-item>
             <h3 class="catalog-item-topic"><a href="#">Кваст</a></h3>
             <p>Промо-сайт производителя крафтового кваса</p>
