Закрыл кавычки в имени класса

--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,7 @@
         </li>
         <li class="catalog-item">
           <img src="img/catalog-item/img-kvast.jpg" alt="Cайт производителя крафтового кваса Кваст" width="360" height="576">
-          <div class="description-catalog-item>
+          <div class="description-catalog-item">
             <h3 class="catalog-item-topic"><a href="#">Кваст</a></h3>
             <p>Промо-сайт производителя крафтового кваса</p>
             <a class="button" href="order-project.html">9900 руб.</a>
