Внес правки в список файлов в папке с изображениями и добавил класс к тегу p index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="description-company">
       <h3 class="visually-hidden">Наши возможности и достижения</h3>
       <div class="principle-company">
-        <p><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
+        <p class="principle-slogan"><b>Мы маленькая, но гордая дизайн-студия из Краснодара.</b></p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
           превыше креатива. Работаем не покладая рук, как роботы.</p>
       </div>
@@ -81,7 +81,7 @@
       </div>
       <div class="our-progress">
         <img src="img/description-company/nerds-illustration.png" width="360" height="208" alt="Логотип студии Нёрдс">
-        <p>C 2004 года Любим точность во всем:</p>
+        <p class="progress-slogan">C 2004 года Любим точность во всем:</p>
         <table class="progress-table">
           <tr class="procent">
             <td>146%</td>
