Добавил section c формой в index.html

--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
       </div>
     </div>
     <!-- Здесь будет форма обратной связи -->
+    <section class="write-back">
+      <h2 class="write-us">Напишите нам</h2>
+      <form class="write-fill-up" action="index.html" method="post">
+          <label>Ваше имя:<input type="text" name="name sername" value="" placeholder="Имя Фамилия"></label>
+          <label>Ваш e-mail:<input type="text" name="e-mail" value="" placeholder="email@example.com"></label>
+          <label>Текст письма:<textarea name="letter" placeholder="В свободной форме"></textarea></label>
+          <button class="modal-close" type="submit">Закрыть</button>
+          <button class="button" type="submit">Отправить</button>
+      </form>
+    </section>
     <div class="connection">
       <div class="footer-social">
         <a class="social button" href="#">Вконтакте</a>
